Added withFilter subscription function to filter publishing by employer id

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apolloServerSubs",
+  "name": "Apollo  server subscriptions",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
